qtwebengine-opensource-src (5.9.2+dfsg-1~) UNRELEASED; urgency=medium

  [ Sandro Knauß ]
  * New upstream release.
  * Remove upstream applied patch: armhf-options.patch
  * Update patch hunks.
  * Update copyright for 5.9.2.
  * Add new Build-Dependency: qtquickcontrols2-5-dev
  * Bump Qt build-dependencies to 5.9.2.
  * Update symbols for libqt5webenginecore5 for 5.9.2 for amd64.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 17 Oct 2017 23:57:46 +0200

qtwebengine-opensource-src (5.9.1+dfsg-5) unstable; urgency=medium

  * Drop add_mips_support.patch. Chromium cannot be built for big endian
    anyway, because of skia.
  * Limit Architecture field to architectures supported by upstream
    (closes: #864323, #864324, #864325, #864326).
  * Fix package name in dh_link command (closes: #876860).
  * Bump Standards-Version to 4.1.1, stop using deprecated Priority: extra.
  * Drop autotools-dev and dh-autoreconf build-dependencies, they are
    unnecessary with debhelper 10.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 30 Sep 2017 20:25:06 +0300

qtwebengine-opensource-src (5.9.1+dfsg-4) unstable; urgency=medium

  * Disable gold on arm64, to workaround bug #869768.
  * Add the needed QML dependencies to qtwebengine5-examples package
    (closes: #857859).
  * Update debian/libqt5webenginecore5.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 23 Aug 2017 21:29:52 +0300

qtwebengine-opensource-src (5.9.1+dfsg-3) unstable; urgency=medium

  * Team upload.
  * Release to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 16 Aug 2017 15:27:58 -0300

qtwebengine-opensource-src (5.9.1+dfsg-2) experimental; urgency=medium

  * Make qtwebengine5-dev depend on qtpositioning5-dev, as the built CMake
    files now include it as dependency.
  * Add a patch to print compiler commands when bootstrapping gn. This helps
    us discover wrong compiler flags, such as using -mfpu=neon on armhf.