@@ -8,6 +8,7 @@ qtwebengine-opensource-src (5.9.2+dfsg-1~) UNRELEASED; urgency=medium
   * Add new Build-Dependency: qtquickcontrols2-5-dev
   * Bump Qt build-dependencies to 5.9.2.
   * Update symbols for libqt5webenginecore5 for 5.9.2 for amd64.
+  * Synchronize missing-sources for 5.9.2.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 17 Oct 2017 23:57:46 +0200
 
